--- a/src/components/form/Form.style.scss
+++ b/src/components/form/Form.style.scss
@@ -1,14 +1,21 @@
 .form {
+  display: flex;
+  justify-content: center;
+  margin-bottom:40px;
 
   &-group {
     margin-bottom: 10px;
 
-    label {
-      display: block;
-    }
     input[type="text"] {
       display:block;
-      
+      background-color: #242424;
+      color: #ffffff;
+      border:none;
+      padding: 5px 10px;
+      font-size: 24px;
+      font-weight: 600px;
+      width:400px;
+      margin:auto
     }
   }
 
