Added SearchList to display

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,14 @@
     color: #fff;
     text-align:center;
   }
+  .list-title {
+    font-size: 24px;
+    color: #606060;
+    font-weight: 600;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 20px;
+  }
 
   p {
     color: #404040;
