--- a/src/components/form/Form.style.scss
+++ b/src/components/form/Form.style.scss
@@ -15,7 +15,8 @@
       font-size: 24px;
       font-weight: 600px;
       width:400px;
-      margin:auto
+      margin:auto;
+      text-align:center;
     }
   }
 
