--- a/src/components/Shared/ListContainer/ListContainer.styles.scss
+++ b/src/components/Shared/ListContainer/ListContainer.styles.scss
@@ -6,4 +6,19 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+
+  .loading-container {
+    position:relative;
+
+    .loading {
+      position:absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      div {
+        border-color: black transparent transparent transparent;
+      }
+    }
+  }
 }
