--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  background:black;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -6,7 +9,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin-top:-20px;
-  padding-bottom: 20px;
 }
 
 code {
