--- a/src/pages/Home/Home.styles.scss
+++ b/src/pages/Home/Home.styles.scss
@@ -1,3 +1,18 @@
 .home {
   padding-top: 40px;
+
+  .loading-container {
+    width:80%;
+    margin: auto;
+    min-height: 400px;
+    text-align: center;
+    position: relative;
+
+    .loading {
+      position: absolute;
+      top:50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
