--- a/src/components/Shared/PersonCard/PersonCard.styles.scss
+++ b/src/components/Shared/PersonCard/PersonCard.styles.scss
@@ -8,8 +8,9 @@
   background: linear-gradient(180deg, rgba(252,192,76,1) 0%, rgba(240,170,78,1) 49%, rgba(228,147,81,1) 100%);
   text-align:center;
   border-radius: 5px;
+  transition: transform .3s;
 }
 
 .person-card:hover {
-
+  transform: scale(1.05, 1.05);
 }
