--- a/src/components/SearchList/SearchList.styles.scss
+++ b/src/components/SearchList/SearchList.styles.scss
@@ -1,6 +1,21 @@
 .search-list {
 
-  &__search-term {
-    color: #fff;
+  &__info {
+    width:80%;
+    margin:auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+    p {
+      font-size: 24px;
+      color: #606060;
+      font-weight: 600;
+    }
+
+    &__search-term {
+      color: #fff;
+    }
   }
+
 }
