--- a/src/components/Shared/Button/Button.styles.scss
+++ b/src/components/Shared/Button/Button.styles.scss
@@ -7,8 +7,8 @@
 .btn:hover {
   cursor: pointer;
   box-shadow: 0px 1px 5px #444;
-  transform: translate(1%, 1%);
-  transform: scale(1.1, 1.1);
+  // transform: translate(1%, 1%);
+  // transform: scale(1.1, 1.1);
 }
 
 //background
