--- a/src/components/Shared/ListContainer/ListContainer.styles.scss
+++ b/src/components/Shared/ListContainer/ListContainer.styles.scss
@@ -8,6 +8,7 @@
   justify-content: space-evenly;
   height: 480px;
   overflow-y:auto;
+  border-radius: 5px;
 
   .loading-container {
     position:relative;
@@ -33,6 +34,29 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+    }
+  }
+}
+
+//media queries
+@media screen and (min-width: 320px) and (max-width: 375px) {
+  .list-container {
+
+    .no-result-container {
+      p{
+        white-space: pre;
+      }
+    }
+  } 
+}
+
+@media screen and (min-width: 376px) and (max-width: 425px) {
+  .list-container {
+
+    .no-result-container {
+      p{
+        white-space: pre;
+      }
     }
   }
 }
