--- a/src/components/form/Form.style.scss
+++ b/src/components/form/Form.style.scss
@@ -21,3 +21,28 @@
   }
 
 }
+
+//media queries
+@media screen and (min-width: 320px) and (max-width: 375px) {
+  .form {
+
+    &-group {
+
+      input[type="text"] {
+        width: 250px;
+      }
+    }
+  }  
+}
+
+@media screen and (min-width: 376px) and (max-width: 425px) {
+  .form {
+
+    &-group {
+
+      input[type="text"] {
+        width: 320px;
+      }
+    }
+  }
+}
