--- a/src/components/Shared/CharacterCard/CharacterCard.styles.scss
+++ b/src/components/Shared/CharacterCard/CharacterCard.styles.scss
@@ -1,4 +1,4 @@
-.person-card {
+.character-card {
   width: 200px;
   height: 200px;
   margin-bottom: 20px;
@@ -14,6 +14,6 @@
   transition: transform .3s;
 }
 
-.person-card:hover {
+.character-card:hover {
   transform: scale(1.05, 1.05);
 }
