improved style on footer

--- a/src/components/Footer/Footer.styles.scss
+++ b/src/components/Footer/Footer.styles.scss
@@ -1,8 +1,7 @@
 .footer {
   height: 100px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  p {
-    margin-top: 40px;
-  }
 }
